# presidio_reimbursement_approval_tool

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_SETUP.md  FIX_ANON_KEY.md  PLAN.md  README.md  SUPABASE_OAUTH_SETUP.md  TASKS.md  appwrite.config.json  fix-dockerfiles.sh  k8s-manifests.yaml  scratch_run_real_pg.py
ai_review_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
ai_review_service/ai_review_service/: __init__.py  __main__.py  api.py  config.py  contracts.py  persistence.py  postgres_persistence.py  providers.py  redaction.py  rules.py  service.py  worker.py
ai_review_service/tests/: conftest.py  test_api.py  test_grounded_citations.py  test_production_configuration.py  test_provider_resilience.py  test_provider_selection.py  test_provider_structured_output.py  test_redaction.py  test_rules.py  test_service_persistence.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  agent.py  auth.py  database.py  docker-compose.yml  fix_admin_permissions.sql  fix_roles_add_code.sql  main.py  models.py  pyproject.toml  reset_and_seed.sql  schemas.py  seed_data.py  seed_data.sql  seed_data_complete.sql  seed_default_workflow.sql  seed_minimal.sql
backend/alembic/: env.py
backend/alembic/versions/: 001_baseline.py  002_add_policies.py  003_add_reports_workflow_and_collaboration.py  004_payment_operations.py  005_add_delegated_approval_audit.py  006_scope_policies_to_organizations.py  007_oauth_identity_allowlist.py  008_email_auth_approval.py  009_tenant_workflows_catalogs_and_outbox.py  ebc0d1e78433_add_email_auth_and_pending_approval_.py
backend/app/: main.py  worker.py
backend/app/api/: analytics_schemas.py  delegation_schemas.py  payment_schemas.py  receipt_intelligence_schemas.py  report_schemas.py  schemas.py  workflow_schemas.py
backend/app/core/: clerk.py  config.py  database.py  deps.py  observability.py  rate_limit.py  security.py  supabase_auth.py
backend/app/models/: __init__.py  approval_history.py  approval_level.py  attachment.py  audit_log.py  base.py  comment.py  delegation.py  department.py  expense_category.py  expense_item.py  expense_report.py  integration_outbox.py  notification.py  organization.py  payment_batch.py  payment_event.py  payment_record.py  permission.py  policy.py  role.py  role_permission.py  session.py  user.py  user_access_request.py  user_role.py  vendor.py  workflow_rule.py
backend/app/services/: __init__.py  access_request_service.py  ai_review_client.py  analytics_service.py  approval_service.py  audit_service.py  azure_email_service.py  category_service.py  clerk_provisioning_service.py  comment_service.py  delegation_service.py  department_service.py  integration_outbox_service.py  item_service.py  notification_delivery_service.py  notification_service.py  oauth_access_service.py  org_chart_service.py  payment_service.py  policy_assistant_client.py  (+13 more)
backend/docs/: notification-delivery.md
backend/tests/: conftest.py  test_access_requests.py  test_ai_review_boundary.py  test_ai_review_signals.py  test_analytics_api.py  test_approval_history_service.py  test_approval_workflow_service.py  test_attachment_tenant_authorization.py  test_audit_service.py  test_azure_blob_storage.py  test_base_model.py  test_clerk_oauth_access.py  test_clerk_provisioning_service.py  test_config.py  test_delegation_workflow.py  test_delegations_api.py  test_departments_api.py  test_effective_policy_and_resubmission.py  test_f1_user_api.py  test_full_reimbursement_flow.py  test_integration_outbox.py  test_migrations.py  test_notification_delivery_service.py  test_oauth_access.py  test_observability.py  test_payment_operations.py  test_policy_assistant_client.py  test_policy_assistant_routes.py  test_policy_document_text.py  test_policy_models.py  test_policy_routes.py  test_policy_tenant_scope.py  test_policy_validation_and_storage.py  test_provisioning_service.py  test_receipt_intelligence_client.py  test_receipt_intelligence_routes.py  test_report_service.py  test_security.py  test_upload_guard.py  test_withdrawal_notifications.py  (+4 more)
policy_assistant_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
policy_assistant_service/policy_assistant_service/: __init__.py  __main__.py  api.py  config.py  contracts.py  logging.py  postgres_store.py  providers.py  sanitization.py  service.py  vector_store.py
policy_assistant_service/tests/: __init__.py  conftest.py  test_api.py  test_grounding.py  test_production_configuration.py
receipt_intelligence_service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
receipt_intelligence_service/receipt_intelligence_service/: __init__.py  __main__.py  analysis.py  api.py  config.py  contracts.py  observability.py  ocr.py  persistence.py  postgres_persistence.py  providers.py  redaction.py  service.py
receipt_intelligence_service/tests/: __init__.py  conftest.py  test_analysis.py  test_api.py  test_persistence.py  test_privacy_and_limits.py  test_production_configuration.py
(+247 files in other folders)
