[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-ai-expense-review"
version = "0.1.0"
description = "Isolated, human-in-the-loop AI expense review service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
gemini = ["google-genai>=1.0"]
groq = ["groq>=0.36"]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_review_service*"]
