[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.2",
    "alembic>=1.18.5",
    "bcrypt>=5.0.0",
    "boto3>=1.43.48",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "passlib>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.9.0",
    "pyjwt[crypto]>=2.13.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.32",
    "openpyxl>=3.1.5",
    "reportlab>=4.2.5",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
    "appwrite>=13.0.0",
    "azure-identity>=1.25.0",
    "azure-storage-blob>=12.30.0",
    "azure-communication-email>=1.0.0",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "httpx>=0.28.1",
    "moto[s3]>=5.2.2",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "testcontainers[postgres]>=4.14.2",
]
