[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-policy-assistant"
version = "0.1.0"
description = "Isolated, policy-grounded retrieval assistant for Presidio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "appwrite>=22.0.0",
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "uvicorn>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["policy_assistant_service*"]
