[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "presidio-receipt-intelligence"
version = "0.1.0"
description = "Isolated, deterministic receipt metadata analysis service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.0",
    "Pillow>=10.0",
    "pytesseract>=0.3.10",
    "uvicorn>=0.30",
    "groq>=0.12",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["receipt_intelligence_service*"]
